--- a/docs/package.json
+++ b/docs/package.json
@@ -76,6 +76,7 @@
         "@mdit/plugin-sub": "^0.20.0",
         "@mdit/plugin-sup": "^0.20.0",
         "@mdit/plugin-tab": "^0.20.0",
+        "@nolebase/vitepress-plugin-highlight-targeted-heading": "^2.18.2",
         "@shikijs/markdown-it": "^3.4.2",
         "@types/js-yaml": "^4.0.9",
         "add": "^2.0.6",
